增加jvm大小的调整